modal overlay z-index fix

--- a/assets/scss/admin.scss
+++ b/assets/scss/admin.scss
@@ -417,6 +417,7 @@ footer {
 
 .v--modal-overlay {
     background: rgba(0, 0, 0, 0.5);
+    z-index: 100;
 }
 
 
